# NetRepeater

./: README.md  pyproject.toml  setup.py
.github/workflows/: test-and-release.yaml
NetRepeater/: AddressAdder.py  ServerCluster.py  _Meta.py  __main__.py
NetRepeater/DNS/: ModuleManagerLoader.py  NetRepeaterMod.py  ServerManager.py
NetRepeater/Downstream/Handler/: AutoBlockByRate.py  HandlerDict.py  HandlerManager.py  StreamRepeatHandlerBase.py  TCPRepeatHandler.py  TLSRepeatHandler.py
NetRepeater/Func/StaticRepeat/: __main__.py
NetRepeater/Inbound/: FindCreator.py  LegacyServer.py  Server.py  TCP.py  Utils.py  __init__.py
NetRepeater/Inbound/Server/: ConfigReader.py  TCP.py  TLS.py
NetRepeater/Outbound/: FindCreator.py  Handler.py  TCP.py  __init__.py
NetRepeater/Utils/: RandIPGenerator.py
NetRepeater/Utils/IfaceSetup/: IPManager.py
tests/: test_config.json
tests/unittesting/: MockServer.py  TestModules.py
tests/unittesting/DNS/: TestModuleManagerLoaders.py  TestNetRepeaterMod.py  TestServerManager.py
tests/unittesting/Inbound/: TestTCP.py
tests/unittesting/Outbound/: TestTCP.py
tests/unittesting/Utils/: TestRandIPGenerator.py
tests/unittesting/Utils/IfaceSetup/: TestIPManager.py
