[project]
name            = "NetRepeater"
version         = "1.2.1"
authors         = [
	{ name = "Haofan Zheng" },
]
description     = "A simple networking data forwarder"
readme          = "README.md"
license         = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
	'netifaces >= 0.11.0',
	'ModularDNS @ git+https://github.com/zhenghaven/ModularDNS.git@v0.4.0',
	'PyNetworkLib @ git+https://github.com/zhenghaven/PyNetworkLib.git@v0.0.6',
]

[project.urls]
Repository = "https://github.com/zhenghaven/NetRepeater"

[tool.setuptools.packages.find]
exclude = [
	'setup.py',
	'run_unittest.py',
	'test*',
]

[project.entry-points.'console_scripts']
NetRepeater = 'NetRepeater.__main__:main'

